# kendalltau

./: .clang-format  CMakeLists.txt  README.md
include/kt/: histogram.hh  rgb.hh  table.hh  z_score.hh
src/: kendall.py
src/python/: _kt.cc
tests/: test.py
